--- a/juggle_im/android/build.gradle
+++ b/juggle_im/android/build.gradle
@@ -16,6 +16,9 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
+        maven {
+            url "https://repo.juggle.im/repository/maven-releases/"
+        }
     }
 }
 
@@ -38,6 +41,7 @@ android {
     dependencies {
         testImplementation("junit:junit:4.13.2")
         testImplementation("org.mockito:mockito-core:5.0.0")
+        implementation 'com.juggle.im:juggle:1.8.11.2'
     }
 
     testOptions {
