1. add onSoundLevelUpdate callback 2. update 0.0.28

--- a/juggle_im/example/ios/Runner/Info.plist
+++ b/juggle_im/example/ios/Runner/Info.plist
@@ -45,5 +45,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>need microphone for voice call</string>
 </dict>
 </plist>
