--- a/juggle_im/example/ios/Runner/Info.plist
+++ b/juggle_im/example/ios/Runner/Info.plist
@@ -47,5 +47,7 @@
 	<true/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>need microphone for voice call</string>
+	<key>NSCameraUsageDescription</key>
+	<string>nee camera for video call</string>
 </dict>
 </plist>
