--- a/juggle_im/android/build.gradle
+++ b/juggle_im/android/build.gradle
@@ -42,8 +42,9 @@ android {
     dependencies {
         testImplementation("junit:junit:4.13.2")
         testImplementation("org.mockito:mockito-core:5.0.0")
-        implementation 'com.juggle.im:juggle:1.8.18.2'
+        implementation 'com.juggle.im:juggle:1.8.19.1'
         implementation 'com.juggle.call.zego:juggle:1.8.15.7'
+        implementation 'com.juggle.ultimate:juggle:1.8.19.1'
         implementation 'im.zego:express-video:3.17.3'
     }
 
